// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionClose Dialog operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Close
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="close-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-close-circle theme--light"></i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionClose Dialog owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Close
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="close-icon" class="v-icon notranslate v-icon--left mdi mdi-close-circle theme--light"></i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionClose Icon operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Close
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="close-icon" class="v-icon notranslate v-icon--disabled v-icon--left mdi mdi-close-circle theme--light"></i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionClose Icon owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Close
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="close-icon" class="v-icon notranslate v-icon--left mdi mdi-close-circle theme--light"></i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
